# esp32-idf-rust-http-server

./: .gitignore  README.md  dev
.guest/: cargo.sh
app/: Cargo.toml  cfg.toml.example
app/src/: main.rs
lib/wifi/: Cargo.toml
lib/wifi/src/: lib.rs
